# DBFinTechCampus

./: README.md
backend/: Cargo.toml
backend/src/: .env  main.rs
backend/src/api/: admin_api.rs  mod.rs  offer_api.rs  partner_api.rs  user_api.rs  wallet_api.rs
backend/src/models/: admin_model.rs  mod.rs  offer_model.rs  partner_model.rs  payment_model.rs  transaction_model.rs  user_model.rs  wallet_model.rs
backend/src/repository/: repository.rs
front-end/db_frontend/: index.html  package-lock.json  package.json  tailwind.config.js
front-end/db_frontend/src/: App.css  App.jsx  main.jsx
front-end/db_frontend/src/components/: home.component.jsx  left.component.jsx  login.component.jsx  navbar.component.jsx  offer.component.jsx  offer.partner.component.jsx  offer.users.component.jsx  register.component.jsx  table.component.jsx
front-end/db_frontend/src/routes/: home.route.jsx
